подключен Swagger/OpenAPI, добавлены статусы и CRUD, сидеры и документация
